--- a/Bloggers/package.json
+++ b/Bloggers/package.json
@@ -1,18 +1,17 @@
-
 {
- 
   "name": "reactapp",
   "version": "1.0.0",
   "description": "reactapp",
   "main": "main.js",
   "scripts": {
-     "start": "webpack-dev-server --hot"
+    "start": "webpack-dev-server --hot"
   },
   "author": "HP",
   "license": "ISC",
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-router-dom": "^4.1.1",
     "webpack": "^3.0.0-rc.1",
     "webpack-dev-server": "^2.4.5"
   }
