--- a/Bloggers/package.json
+++ b/Bloggers/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-infinite-scroll": "^0.1.5",
+    "react-lazy-load": "^3.0.12",
     "react-router-dom": "^4.1.1",
     "webpack": "^3.0.0-rc.1",
     "webpack-dev-server": "^2.4.5"
