--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "author": "HP",
   "license": "ISC",
   "dependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "es2015": "0.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-infinite-scroll": "^0.1.5",
@@ -16,5 +21,6 @@
     "react-router-dom": "^4.1.1",
     "webpack": "^3.0.0-rc.1",
     "webpack-dev-server": "^2.4.5"
-  }
+  },
+  "devDependencies": {}
 }
